--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,52 @@
-{{#each users as |user| }}
-<div class="row align-center mb-5">
-  <div class="col-md-6">
-    <h2>{{{get_emoji}}} {{user.name}}</h2>
-  </div>
-  <div class="col-md-6">
-    <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
+
+{{#extends 'layouts/main'}}
+{{#content 'page-title'}}Home{{/content}}
+
+{{!-- button to trigger new post modal: --}}
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newPostModal">New Post</button>
+
+{{!-- new post modal: --}}
+<div class="modal fade" id="newPostModal" tabindex="-1" aria-labelledby="newPostModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="newPostModalLabel">New Post</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        {{> newPost }}
+      </div>
+    </div>
   </div>
 </div>
+
+{{!-- edit post modal: --}}
+<div class="modal fade" id="editPostModal" tabindex="-1" aria-labelledby="editPostModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editPostModalLabel">Edit Post</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        {{> editPost }}
+      </div>
+    </div>
+  </div>
+</div>
+
+{{!-- then let's loop thru array of blog posts to display them on homepage --}}
+{{#each posts}}
+  <div class="card my-3">
+    <div class="card-body">
+      <h5 class="card-title">{{title}}</h5>
+      <p class="card-text">{{body}}</p>
+      <p class="card-subtitle text-muted">{{author}}</p>
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editPostModal" data-post-id="{{id}}">Edit</button>
+    </div>
+  </div>
 {{/each}}
+
+{{/extends}}
+
+<script src="../public/js/edit.js"></script>
