My tutor Andrew helped fix some of my routes that were too complicated, added more necessary files

--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -1,5 +1,3 @@
-{{!-- define basic structure of blog app pages: --}}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -33,7 +31,7 @@
     {{{ body }}}
   </main>
   <footer>
-      &copy; Techno Blog 2023
+      <a href="/dashboard/new">Create New Post</a>
   </footer>
   
 </body>
