--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
-<h2>Login</h2>
-
-<form class="form login-form">
+<div class="card">
+<div class="card-header"><h2>Login</h2></div>
+<form id="login-form" class="card-body">
   <div class="form-group">
     <label for="email-login">Email:</label>
     <input class="form-input" type="text" id="email-login" />
@@ -10,8 +10,13 @@
     <input class="form-input" type="password" id="password-login" />
   </div>
   <div class="form-group">
-    <button class="btn btn-primary" type="submit">Login</button>
+    <button id="login-button" class="btn btn-primary" type="submit">Login</button>
   </div>
+  <a href="/signup" type="button">Signup?</a>
 </form>
 
+</div>
+
 <script src="/js/login.js"></script>
+
+{{!-- classes & IDs must match login.js. target btn / form in event listener --}}
