--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -7,15 +7,14 @@
 {{!-- define main content --}}
 {{#content 'main'}}
   <h2>Edit Post</h2>
-    {{!-- post.id or just id? same question for post.title and post.content below... --}}
-  <form action="/posts/{{ post.id }}?_method=PUT" method="POST">
+  <form class="id" action="/posts/{{ id }}?_method=PUT" method="POST">
     <div>
       <label for="title">Title:</label>
-      <input type="text" name="title" value="{{ post.title }}" required>
+      <input class="edit-title-input" type="text" name="title" value="{{ title }}" required>
     </div>
     <div>
       <label for="content">Content:</label>
-      <textarea name="content" rows="10" required>{{ post.content }}</textarea>
+      <textarea class="edit-content-input" name="content" rows="10" required>{{ content }}</textarea>
     </div>
     <div>
       <button type="submit">Update</button>
