--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,8 +2,8 @@
 <div class="card-header"><h2>Login</h2></div>
 <form id="login-form" class="card-body">
   <div class="form-group">
-    <label for="email-login">Email:</label>
-    <input class="form-input" type="text" id="email-login" />
+    <label for="username-login">Username:</label>
+    <input class="form-input" type="text" id="username-login" />
   </div>
   <div class="form-group">
     <label for="password-login">Password:</label>
