--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,17 +1,21 @@
-<h2>Login</h2>
-
-<form class="form signup-form">
-  <div class="form-group">
-    <label for="email-signup">Email:</label>
-    <input class="form-input" type="text" id="email-signup" />
+<div class="card">
+  <div class="card-header">
+    <h2>Sign Up!</h2>
   </div>
-  <div class="form-group">
-    <label for="password-signup">Password:</label>
-    <input class="form-input" type="password" id="password-signup" />
+  <div id="signup" role="tabpanel">
+    <form id="signup-form" class="card-body">
+      <div>
+        <label for="username-signup">Username</label>
+        <input type="text" id="username-signup" />
+      </div>
+      <div>
+        <label for="password-signup">Password</label>
+        <input type="password" id="password-signup" />
+      </div>
+      <button type="submit" id="signup-btn" class="btn" >Signup!</button>
+      <a href="/login">Login instead?</a>
+    </form>
   </div>
-  <div class="form-group">
-    <button class="btn btn-primary" type="submit">Sign Up</button>
-  </div>
-</form>
+</div>
 
 <script src="/js/signup.js"></script>
