--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -1,28 +1,23 @@
-{{!-- set the layout to dashboard --}}
-{{#extends 'dashboard'}}
+<div class="post card">
+  <div class="card-header">
+    <h2>Edit Post</h2>
+  </div>
+  <form id="edit-post-form" class="card-body">
+    <input type="hidden" name="post-id" value="{{post.id}}" />
 
-{{!-- specify title --}}
-{{#content 'title'}}Edit Post{{/content}}
+    <label class="form-label" for="post-title">Title</label>
+    <input type="text" name="post-title" value="{{post.title}}" class="form-input" />
 
-{{!-- define main content --}}
-{{#content 'main'}}
-  <h2>Edit Post</h2>
-  <form class="id" action="/posts/{{ id }}?_method=PUT" method="POST">
-    <div>
-      <label for="title">Title:</label>
-      <input class="edit-title-input" type="text" name="title" value="{{ title }}" required>
-    </div>
-    <div>
-      <label for="content">Content:</label>
-      <textarea class="edit-content-input" name="content" rows="10" required>{{ content }}</textarea>
-    </div>
-    <div>
-      <button type="submit">Update</button>
-    </div>
+    <label class="form-label" for="post-body">Content</label>
+    <textarea name="post-body" class="form-input">{{post.body}}</textarea>
+
+    <button type="submit" class="btn">Update</button>
+
+    <button type="button" id="delete-btn" class="btn">Delete</button>
   </form>
-{{/content}}
+</div>
 
-<script src="../../public/js/edit.js"></script>
+<script src="/js/edit.js"></script>
 
 
 
