test - add Post.updateOne to comment POST route - see if new comment renders on singlePost view

--- a/views/allPostsAdmin.handlebars
+++ b/views/allPostsAdmin.handlebars
@@ -1,4 +1,4 @@
-<h1>All Posts</h1>
+<h1>All Your Posts!</h1>
 <div class="posts list-group">
   {{#each posts}}
     <a class="list-item flex-row justify-space-between" href="/dashboard/edit/{{id}}">
