--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,25 +11,26 @@
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      The Tech Blog
-    </h1>
     
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
+        <li class="li-inline nav-item"><a href="/">Home</a></li>
       {{#if logged_in}}
-      <li><a href="/dashboard">Dashboard</a></li>
-      <li><a href="#" class="btn" id="logout">logout</a></li>
+        <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
+        <li class="li-inline nav-item"><a href="#" class="btn" id="logout">Logout</a></li>
       {{else}}
-      <li><a href="/login">Login</a></li>
+        <li class="li-inline nav-item"><a href="/login">Login</a></li>
       {{/if}}
       </ul>
-      
     </nav>
+
+  <header class="display-flex justify-space-between align-center p-2">
+    <h1>
+      <a href="/">Techno Blog</a>
+    </h1>
   </header>
-  <main class="container container-fluid mt-5">
+
+  <main class="col-auto">
     {{{ body }}}
   </main>
   <footer>
@@ -37,5 +38,6 @@
   </footer>
   
 </body>
-  <script src="/js/logout.js"></script>
 </html>
+
+<script src="/js/logout.js"></script>
