--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -33,9 +33,9 @@
             </div>
             <div class="card-body">
                 <input type="hidden" name="postId" value="{{post.id}}" />
-                <label class="form-label" for="comment-body">Comment</label>
+                <label class="form-label" for="comment-body">Comment:</label>
                 <textarea name="comment-body" class="form-input"></textarea>
-                <button type="submit" class="btn">Submit</button>
+                <button type="submit" class="btn">Submit Comment!</button>
             </div>
         </form>
 </div>
