--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -1,26 +1,20 @@
 <div class="post card">
   <div class="card-header">
-    <h2>Edit Post</h2>
+    <h2>Edit Post?</h2>
   </div>
   <form id="edit-post-form" class="card-body">
     <input type="hidden" name="post-id" value="{{post.id}}" />
 
-    <label class="form-label" for="post-title">Title</label>
+    <label class="form-label" for="post-title">Title of post:</label>
     <input type="text" name="post-title" value="{{post.title}}" class="form-input" />
 
-    <label class="form-label" for="post-body">Content</label>
+    <label class="form-label" for="post-body">Content of post:</label>
     <textarea name="post-body" class="form-input">{{post.body}}</textarea>
 
-    <button type="submit" class="btn">Update</button>
+    <button type="submit" class="btn">Update Post</button>
 
-    <button type="button" id="delete-btn" class="btn">Delete</button>
+    <button type="button" id="delete-btn" class="btn">Delete Post</button>
   </form>
 </div>
 
 <script src="/js/edit.js"></script>
-
-
-
-{{!-- <form action="/posts/{{id}}" method="POST">
-{{!-- _method with a value of PUT tells server that this is a PUT request, since HTML forms only support GET and POST reqs: --}}
-  <input type="hidden" name="_method" value="PUT"> --}}
