--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
     <input class="form-input" type="password" id="password-login" />
   </div>
   <div class="form-group">
-    <button id="login-button" class="btn btn-primary" type="submit">Login</button>
+    <button id="login-button" class="btn btn-primary" type="submit">Login!</button>
   </div>
   <a href="/signup" type="button">Signup?</a>
 </form>
