--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -1,20 +1,36 @@
-<div class="post card">
-  <div class="card-header">
-    <h2>Edit Post?</h2>
-  </div>
-  <form id="edit-post-form" class="card-body">
-    <input id="post-id" type="hidden" name="post-id" value="{{post.id}}" />
+<div class='post card'>
+	<div class='card-header'>
+		<h2>Edit Post?</h2>
+	</div>
+	<form id='edit-post-form' class='card-body'>
+		<input id='post-id' type='hidden' name='post-id' value='{{post.id}}' />
 
-    <label class="form-label" for="post-title">Title of post:</label>
-    <input id="edit-post-title" type="text" name="post-title" value="{{post.title}}" class="form-input" />
+		<label class='form-label' for='post-title'>Title of post:</label>
+		<input
+			id='edit-post-title'
+			type='text'
+			name='post-title'
+			value='{{post.title}}'
+			class='form-input'
+		/>
 
-    <label class="form-label" for="post-body">Content of post:</label>
-    <textarea id="edit-post-content" name="post-body" class="form-input">{{post.body}}</textarea>
+		<label class='form-label' for='post-body'>Content of post:</label>
+		<textarea
+			id='edit-post-content'
+			name='post-body'
+			class='form-input'
+		>{{post.body}}</textarea>
 
-    <button id="edit-btn" type="submit" class="btn">Update Post</button>
+		<button
+			id='edit-btn'
+			type='submit'
+			class='btn'
+			data-post-id='{{post.id}}'
+		>Update Post</button>
 
-    <button id="delete-btn" type="button" id="delete-btn" class="btn">Delete Post</button>
-  </form>
+		<button id='delete-btn' type='button' id='delete-btn' class='btn'>Delete
+			Post</button>
+	</form>
 </div>
 
-<script src="/js/edit.js"></script>
+<script src='/js/edit.js'></script>
