--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,43 +1,47 @@
-{{!-- define basic structure of blog app pages: --}}
+{{! define basic structure of blog app pages: }}
 
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Techno Blog</title>
-  <link rel="stylesheet" href="/css/jass.css">
-</head>
+<html lang='en'>
 
-<body>
-    
-    <nav>
-      <ul>
-        <li class="li-inline nav-item"><a href="/">Home</a></li>
-      {{#if logged_in}}
-        <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-        <li class="li-inline nav-item"><a href="#" class="btn" id="logout">Logout</a></li>
-      {{else}}
-        <li class="li-inline nav-item"><a href="/login">Login</a></li>
-      {{/if}}
-      </ul>
-    </nav>
+	<head>
+		<meta charset='UTF-8' />
+		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
+		<title>Techno Blog</title>
+		<link rel='stylesheet' href='/css/jass.css' />
+	</head>
 
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      <a href="/">Techno Blog</a>
-    </h1>
-  </header>
+	<body>
 
-  <main class="col-auto">
-    {{{ body }}}
-  </main>
-  <footer>
-      &copy; Techno Blog 2023
-  </footer>
-  
-</body>
+		<nav>
+			<ul>
+				<li class='li-inline nav-item'><a href='/'>Home</a></li>
+				{{#if logged_in}}
+					<li class='li-inline nav-item'><a href='/dashboard'>Dashboard</a></li>
+					<li class='li-inline nav-item'><a
+							href='#'
+							class='btn'
+							id='logout'
+						>Logout</a></li>
+				{{else}}
+					<li class='li-inline nav-item'><a href='/login'>Login</a></li>
+				{{/if}}
+			</ul>
+		</nav>
+
+		<header class='display-flex justify-space-between align-center p-2'>
+			<h1>
+				<a href='/'>Techno Blog</a>
+			</h1>
+		</header>
+
+		<main class='col-auto'>
+			{{{body}}}
+		</main>
+		<footer>
+			&copy; Techno Blog 2023
+		</footer>
+
+	</body>
 </html>
 
-<script src="/js/logout.js"></script>
+<script src='/js/logout.js'></script>
