--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -3,33 +3,22 @@
 		<h2>Edit Post?</h2>
 	</div>
 	<form id='edit-post-form' class='card-body'>
-		<input id='post-id' type='hidden' name='post-id' value='{{post.id}}' />
+		<input type='hidden' name='post-id' value='{{post.id}}' />
 
-		<label class='form-label' for='post-title'>Title of post:</label>
+		<label class='form-label' for='post-title'>Title:</label>
 		<input
-			id='edit-post-title'
 			type='text'
 			name='post-title'
 			value='{{post.title}}'
 			class='form-input'
 		/>
 
-		<label class='form-label' for='post-body'>Content of post:</label>
-		<textarea
-			id='edit-post-content'
-			name='post-body'
-			class='form-input'
-		>{{post.body}}</textarea>
+		<label class='form-label' for='post-body'>Content:</label>
+		<textarea name='post-body' class='form-input'>{{post.body}}</textarea>
 
-		<button
-			id='edit-btn'
-			type='submit'
-			class='btn'
-			data-post-id='{{post.id}}'
-		>Update Post</button>
+		<button type='submit' class='btn'>Update?</button>
 
-		<button id='delete-btn' type='button' id='delete-btn' class='btn'>Delete
-			Post</button>
+		<button type='button' id='delete-btn' class='btn'>Delete!</button>
 	</form>
 </div>
 
