--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -120,7 +120,7 @@ header footer {
 
 /* Cards */
 .card {
-	margin: 0 auto;
+	margin: 10 10;
 	border: 3px solid var(--tertiary);
 	background-color: white;
 	border-radius: 5px;
