--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -26,6 +26,8 @@ body {
 	font-size: 15px;
 	color: var(--dark);
 	line-height: 1.5;
+	display: block;
+	margin-bottom: 1em;
 }
 
 h1,
@@ -98,7 +100,9 @@ header footer {
 }
 
 /* Main content */
-.main {
+main {
+	display: block;
+	margin-bottom: 1em;
 	box-sizing: border-box;
 	background-color: white;
 }
