removed col-auto from body classes in dashboard and main layout views

--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -30,11 +30,11 @@
 
 		<header class='display-flex justify-space-between align-center p-2'>
 			<h1>
-				The Tech Blog
+				Techno Blog
 			</h1>
 		</header>
 
-		<main class='col-auto'>
+		<main>
 			{{{body}}}
 		</main>
 
